--- a/src/App.css
+++ b/src/App.css
@@ -1,14 +1,15 @@
 .App {
   font-family: "Kanit", sans-serif;
   font-size: 62.5%;
-  border-radius: 1rem;
-  height: 100vh;
   background-color: #b0e0e6;
 }
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
   color: rgb(156, 156, 156);
+}
+.App a {
+  text-decoration: none;
 }
 .App button {
   border: none;
@@ -19,53 +20,65 @@ hr {
 }
 .App h1 {
   font-size: 3rem;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.1rem;
   padding: 0.5rem;
   border-bottom: 1px dashed rgb(199, 199, 199);
 }
 .App h2 {
   font-size: 1.5rem;
-  letter-spacing: 0.5rem;
+  letter-spacing: 0.1rem;
   padding: 0.5rem;
 }
 .App header {
-  margin-bottom: 1rem;
   color: #eaecee;
   background-color: #001f3f;
 }
-
 .App ul {
   font-size: 1rem;
   letter-spacing: 0.1rem;
 }
 
 .App nav {
+  height: 4rem;
   position: fixed;
   bottom: 0;
-
+  color: white;
   width: 100%;
-  margin-top: 1rem;
-  padding-top: 0.5rem;
-  padding-bottom: 0.5rem;
-  background-color: #2c3e50;
-
+  background-color: #001f3f;
   border-top: 1px dashed rgb(199, 199, 199);
+  display: flex;
+  align-items: center;
+}
+.App nav ul {
+  list-style-type: none;
+  padding: 0;
+  margin: 0;
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+  padding: 0 1rem;
+}
+.App nav li {
+  display: flex;
+  align-items: center;
+  font-size: 2.5rem;
+  margin-left: 1rem;
+  margin-right: 1rem;
+}
+nav ul li a {
+  color: #869dd8;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  text-align: center;
+}
+nav ul li a > span {
+ 
+  font-size: 0.6rem;
 }
 
-.App nav ul {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-}
-.App nav a {
-  text-decoration: none;
-  color: black;
-  border: 1px solid rgba(0, 0, 0, 0.19);
-  padding: 0.5rem;
-  border-radius: 0.5rem;
-  background-color: rgb(211, 255, 240);
-}
 .App input {
+  background-color: white;
   width: 100%;
   height: 2.5rem;
   border-radius: 0.5rem;
@@ -73,18 +86,17 @@ hr {
   font-size: 1rem;
   padding-left: 1rem;
   box-sizing: border-box;
-  border: 1px solid black;
-  color: dimgray;
+  color: black;
 }
 .App input[type="number"] {
   width: 50%;
 }
 .App select {
+  background-color: white;
   height: 2.5rem;
   border-radius: 0.5rem;
-  font-size: 1.5rem;
+  font-size: 1rem;
   color: dimgray;
-  border: 1px solid black;
 }
 
 .listMeals {
@@ -139,10 +151,10 @@ hr {
   background-color: #5670b1;
   padding: 0.5rem;
   height: 2.5rem;
-font-size: 1.1rem;
-letter-spacing: 0.2rem;
+  font-size: 1.1rem;
+  letter-spacing: 0.2rem;
   color: #ffffff;
-  box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 
 .stockItemsList {
@@ -179,6 +191,7 @@ letter-spacing: 0.2rem;
 
 .unit {
   justify-content: flex-start;
+  margin-right: 0.3rem;
 }
 
 .itemActions {
@@ -188,8 +201,8 @@ letter-spacing: 0.2rem;
 .faIcon {
   color: darkcyan;
   font-size: 1.2rem;
-  margin-left: 0.5rem;
-  margin-right: 1rem;
+
+  margin-right: 0.5rem;
 }
 
 .recipeForm {
