--- a/src/App.css
+++ b/src/App.css
@@ -153,7 +153,7 @@ nav ul li a > span {
 .stockForm button {
   flex-basis: 30%;
   border-radius: 0.5rem;
-  background-color: #007fff;
+  background-color: #0066cc;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
@@ -204,7 +204,7 @@ nav ul li a > span {
 }
 
 .faIcon {
-  color: #007fff;
+  color: #0066cc;
   font-size: 1.5rem;
   margin-right: 0.5rem;
 }
@@ -236,7 +236,7 @@ nav ul li a > span {
 .recipeForm button {
   flex-basis: 30%;
   border-radius: 0.5rem;
-  background-color: #007fff;
+  background-color: #0066cc;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
@@ -315,7 +315,7 @@ nav ul li a > span {
 }
 .selectedMealWindow button {
   border-radius: 0.5rem;
-  background-color: #007fff;
+  background-color: #0066cc;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
