--- a/src/App.css
+++ b/src/App.css
@@ -4,6 +4,10 @@
   background-color: #d3d3d3;
   height: 95vh;
 }
+.App .logo {
+  height: 4rem;
+  width: max-content;
+}
 .defaultMessage {
   margin: 0.5rem;
 }
@@ -117,6 +121,19 @@ nav ul li a > span {
   color: dimgray;
 }
 
+.selectedMealWindow {
+  transition: opacity 0.3s ease, max-height 0.3s ease;
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
+}
+.selectedMealWindow.visible {
+  opacity: 1;
+  max-height: 1000px;
+}
+.mealListHeader {
+  margin-block-start: 0.5rem;
+}
 .listMeals {
   margin-inline-start: 0.5rem;
   margin-inline-end: 0.5rem;
@@ -135,6 +152,7 @@ nav ul li a > span {
 .listMeals p {
   font-weight: 700;
   letter-spacing: 0.2rem;
+  margin-block-end: 0.5rem;
 }
 .listMeals ul li {
   padding-bottom: 0.2rem;
@@ -147,6 +165,8 @@ nav ul li a > span {
   pointer-events: none;
 }
 .greyedOut button {
+  margin-block-start: 0.5rem;
+  margin-block-end: 0.5rem;
   pointer-events: auto;
   border-radius: 0.5rem;
   background-color: #0066cc;
@@ -163,9 +183,38 @@ nav ul li a > span {
   justify-content: space-between;
   width: 100%;
 }
+.stockFormContainer {
+  transition: opacity 0.3s ease, max-height 0.3s ease; /* transition over 300ms */
+  opacity: 0; /* default to invisible */
+  max-height: 0; /* default to no height */
+  overflow: hidden; /* hide overflow */
+}
+.stockFormContainer.visible {
+  opacity: 1; /* make it fully visible */
+  max-height: 1000px; /* adjust as per your form's maximum possible height */
+}
+.stockHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-inline-end: 0.5rem;
+  margin-block-start: 0.5rem;
+  
+}
+.stockHeader .stockToggle {
+  border-radius: 0.5rem;
+  background-color: #0066cc;
+  padding: 0.5rem;
+  height: 2.5rem;
+  font-size: 1.1rem;
+  letter-spacing: 0.1rem;
+  color: #ffffff;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+}
 
 .stockForm {
   margin: 1rem;
+
 }
 .stockForm div {
   display: flex;
@@ -174,6 +223,7 @@ nav ul li a > span {
   flex-shrink: 0;
   flex-wrap: nowrap;
   gap: 2rem;
+  
 }
 .stockForm input[type="number"] {
   margin: 0;
@@ -200,6 +250,17 @@ nav ul li a > span {
   padding-bottom: 0.5rem;
   margin-inline-start: 0.5rem;
   margin-inline-end: 0.5rem;
+  background-color: white;
+
+  margin-inline-start: 0.5rem;
+  margin-inline-end: 0.5rem;
+  font-size: 1rem;
+  border: 1px solid #001f3f;
+  border-radius: 1rem;
+  padding: 0.5rem;
+  background-color: white;
+  margin-bottom: 1rem;
+  box-shadow: 4px 4px 10px -6px black;
 }
 
 .itemDetails {
@@ -207,6 +268,8 @@ nav ul li a > span {
   align-items: center;
   justify-content: flex-start;
   width: 100%;
+  
+  
 }
 
 .itemName {
@@ -239,8 +302,36 @@ nav ul li a > span {
   margin-right: 0.5rem;
 }
 
+.recipeFormContainer {
+  transition: opacity 0.3s ease, max-height 0.3s ease; 
+  opacity: 0;
+  max-height: 0; 
+  overflow: hidden; 
+}
+.recipeFormContainer.visible {
+  opacity: 1;
+  max-height: 1000px; 
+}
+.recipesHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-inline-end: 0.5rem;
+  margin-block-start: 0.5rem;
+}
+.recipesHeader .recipesToggle {
+  border-radius: 0.5rem;
+  background-color: #0066cc;
+  padding: 0.5rem;
+  height: 2.5rem;
+  font-size: 1.1rem;
+  letter-spacing: 0.1rem;
+  color: #ffffff;
+  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+}
 .recipeForm {
   margin: 1rem;
+  
 }
 .recipeForm div {
   display: flex;
@@ -263,7 +354,6 @@ nav ul li a > span {
   flex-basis: 0;
 }
 .recipeForm button {
-  flex-basis: 30%;
   border-radius: 0.5rem;
   background-color: #0066cc;
   padding: 0.5rem;
@@ -349,8 +439,11 @@ nav ul li a > span {
   letter-spacing: 0.1rem;
   color: #ffffff;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
+  margin-block-end: 0.5rem;
 }
-
+.shoppingList h2 {
+  margin-block-start: 0.5rem;
+}
 .shoppingList ul {
   margin-inline-start: 0.5rem;
   margin-inline-end: 0.5rem;
