--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 .App {
-  font-family: "Kanit", sans-serif;
+  font-family: "Quicksand", sans-serif;
   font-size: 62.5%;
   min-height: 100vh;
   margin-bottom: 7rem;
@@ -14,7 +14,7 @@
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  color: #001f3f;
+  color: #000000;
 }
 .App a {
   text-decoration: none;
@@ -30,7 +30,6 @@ hr {
   font-size: 3rem;
   letter-spacing: 0.1rem;
   padding: 0.5rem;
-  border-bottom: 1px dashed #d3d3d3;
 }
 .App h2 {
   font-size: 1.5rem;
@@ -38,9 +37,8 @@ hr {
   padding: 0.5rem;
 }
 .App header {
-  color: #0553a2;
-  background-color: #001f3f;
-
+  color: goldenrod;
+  background-color: #000000;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -60,10 +58,8 @@ hr {
   height: 4rem;
   position: fixed;
   bottom: 0;
-  color: white;
   width: 100%;
-  background-color: #001f3f;
-  border-top: 1px dashed #d3d3d3;
+  background-color: #000000;
   display: flex;
   align-items: center;
 }
@@ -84,7 +80,7 @@ hr {
   margin-right: 1rem;
 }
 nav ul li a {
-  color: #007fff;
+  color: goldenrod;
   display: flex;
   flex-direction: column;
   align-items: center;
@@ -108,27 +104,25 @@ nav ul li a > span {
 }
 
 .App input {
-  background-color: white;
   width: 100%;
-  height: 2.5rem;
-  border-radius: 0.5rem;
   margin-bottom: 0.5rem;
-  font-size: 1rem;
   padding-left: 1rem;
-  box-sizing: border-box;
-  color: black;
 }
 .App input[type="number"] {
   width: 50%;
 }
 .App select {
   width: 50px;
+}
+.App input,
+.App select {
+  background-color: rgb(255, 255, 255);
   box-sizing: border-box;
-  background-color: white;
-  height: 2.5rem;
-  border-radius: 0.5rem;
   font-size: 1rem;
-  color: dimgray;
+  border: none;
+  color: black;
+  border-radius: 0.5rem;
+  height: 2.5rem;
 }
 
 .selectedMealWindow {
@@ -148,10 +142,11 @@ nav ul li a > span {
   margin-inline-start: 0.5rem;
   margin-inline-end: 0.5rem;
   font-size: 1rem;
-  border: 1px solid #001f3f;
+  border: 1px solid #000000;
   border-radius: 0.2rem;
   padding: 0.5rem;
   background-color: white;
+  color: black;
   margin-bottom: 1rem;
   box-shadow: 4px 4px 10px -6px black;
 }
@@ -170,14 +165,14 @@ nav ul li a > span {
   letter-spacing: 0.1rem;
 }
 .greyedOut {
-  background-color: rgba(255, 255, 255, 0.5);
+  background-color: rgba(47, 47, 47, 0.5);
   color: rgba(0, 0, 0, 0.5);
   pointer-events: none;
 }
 .greyedOut button {
   margin-block-start: 0.5rem;
   pointer-events: auto;
-  color: #0066cc;
+  color: goldenrod;
 }
 
 .ingredientItem {
@@ -204,12 +199,12 @@ nav ul li a > span {
 }
 .stockHeader .stockToggle {
   border-radius: 0.5rem;
-  background-color: #0066cc;
+  background-color: goldenrod;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
   letter-spacing: 0.1rem;
-  color: #ffffff;
+  color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 
@@ -232,12 +227,12 @@ nav ul li a > span {
 .stockForm button {
   flex-basis: 30%;
   border-radius: 0.5rem;
-  background-color: #0066cc;
+  background-color: goldenrod;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
   letter-spacing: 0.1rem;
-  color: #ffffff;
+  color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 
@@ -250,11 +245,11 @@ nav ul li a > span {
   margin-inline-start: 0.5rem;
   margin-inline-end: 0.5rem;
   background-color: white;
-
+  color: black;
   margin-inline-start: 0.5rem;
   margin-inline-end: 0.5rem;
   font-size: 1rem;
-  border: 1px solid #001f3f;
+  border: 1px solid #000000;
   border-radius: 0.2rem;
   padding: 0.5rem;
   background-color: white;
@@ -294,7 +289,7 @@ nav ul li a > span {
 }
 
 .faIcon {
-  color: #0066cc;
+  color: goldenrod;
   font-size: 1.5rem;
   margin-right: 0.5rem;
 }
@@ -318,12 +313,12 @@ nav ul li a > span {
 }
 .recipesHeader .recipesToggle {
   border-radius: 0.5rem;
-  background-color: #0066cc;
+  background-color: goldenrod;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
   letter-spacing: 0.1rem;
-  color: #ffffff;
+  color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 .recipeForm {
@@ -351,12 +346,12 @@ nav ul li a > span {
 }
 .recipeForm button {
   border-radius: 0.5rem;
-  background-color: #0066cc;
+  background-color: goldenrod;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
   letter-spacing: 0.1rem;
-  color: #ffffff;
+  color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 .recipeForm .reseptiNapit {
@@ -379,10 +374,10 @@ nav ul li a > span {
   margin-inline-start: 0.5rem;
   margin-inline-end: 0.5rem;
   font-size: 1rem;
-  border: 1px solid #001f3f;
+  border: 1px solid #000000;
   border-radius: 0.2rem;
   padding: 0.5rem;
-  background-color: white;
+  background-color: darkgoldenrod;
   margin-bottom: 1rem;
   box-shadow: 4px 4px 10px -6px black;
   position: relative; /* Added to position the buttons at the bottom */
@@ -428,12 +423,12 @@ nav ul li a > span {
 }
 .selectedMealWindow button {
   border-radius: 0.5rem;
-  background-color: #0066cc;
+  background-color: goldenrod;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
   letter-spacing: 0.1rem;
-  color: #ffffff;
+  color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
   margin-block-end: 0.5rem;
 }
@@ -444,8 +439,8 @@ nav ul li a > span {
   margin-inline-start: 0.5rem;
   margin-inline-end: 0.5rem;
   font-size: 1rem;
-  border: 1px solid #001f3f;
-  border-radius: 1rem;
+  color: black;
+  border-radius: 0.5rem;
   padding: 0.5rem;
   background-color: white;
   margin-bottom: 1rem;
@@ -464,11 +459,11 @@ nav ul li a > span {
 .shoppingList button {
   margin-inline-start: 0.5rem;
   border-radius: 0.5rem;
-  background-color: #0066cc;
+  background-color: goldenrod;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
   letter-spacing: 0.1rem;
-  color: #ffffff;
+  color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
