--- a/src/App.css
+++ b/src/App.css
@@ -9,12 +9,13 @@
   width: max-content;
 }
 .defaultMessage {
-  margin: 0.5rem;
+  margin: 2rem 0.5rem 2rem 0.5rem;
 }
 hr {
   margin-top: 1rem;
   margin-bottom: 1rem;
-  color: #000000;
+  color: #3f3f3f;
+  width: 100%;
 }
 .App a {
   text-decoration: none;
@@ -28,17 +29,18 @@ hr {
 }
 .App h1 {
   font-size: 3rem;
-  letter-spacing: 0.1rem;
+
   padding: 0.5rem;
 }
 .App h2 {
   font-size: 1.5rem;
-  letter-spacing: 0.1rem;
+
   padding: 0.5rem;
 }
 .App header {
   color: goldenrod;
-  background-color: #000000;
+  position: fixed;
+  width: 100%;
   display: flex;
   flex-direction: row;
   flex-wrap: nowrap;
@@ -51,7 +53,6 @@ hr {
 }
 .App ul {
   font-size: 1rem;
-  letter-spacing: 0.1rem;
 }
 
 .App nav {
@@ -124,7 +125,59 @@ nav ul li a > span {
   border-radius: 0.5rem;
   height: 2.5rem;
 }
+.mealListHeader,
+.stockHeader,
+.recipesHeader,
+.shoppingListHeader {
+  display: flex;
+  flex-direction: row;
+  justify-content: space-between;
+  margin-inline-end: 0.5rem;
+  padding-block-start: 4rem;
+}
 
+.listMeals {
+  margin: 0 0.5rem 0 0.5rem;
+  border-radius: 0.5rem;
+  padding: 0.5rem;
+  background-color: goldenrod;
+  color: black;
+  margin-bottom: 0.5rem;
+  box-shadow: 0px 0px 10px -4px gold;
+  transition: all 0.3s ease-out;
+}
+.listMeals hr {
+  color: darkgoldenrod;
+}
+.recipeName {
+  font-weight: 700;
+  padding: 0 0 1rem 0;
+  font-size: 2rem;
+}
+.recipeNameGreyed {
+  font-size: 1.5rem;
+}
+.ingredientItem {
+  display: flex;
+  justify-content: space-between;
+  width: 100%;
+}
+
+.greyedOut {
+  background-color: rgba(0, 0, 0, 0.5);
+  color: rgb(0, 0, 0);
+  pointer-events: none;
+  box-shadow: none;
+}
+.greyedOut button {
+  margin-block-start: 0.5rem;
+  pointer-events: auto;
+  color: goldenrod;
+}
+.puuttuvatAinekset p {
+  margin: 1rem 0 1rem 0;
+  font-weight: 700;
+}
 .selectedMealWindow {
   transition: opacity 0.3s ease, max-height 0.3s ease;
   opacity: 0;
@@ -135,81 +188,51 @@ nav ul li a > span {
   opacity: 1;
   max-height: 1000px;
 }
-.mealListHeader {
-  margin-block-start: 0.5rem;
-}
-.listMeals {
-  margin-inline-start: 0.5rem;
-  margin-inline-end: 0.5rem;
+.selectedMealWindow h2 {
+  padding: 0;
   font-size: 1rem;
-  border: 1px solid #000000;
-  border-radius: 0.2rem;
+}
+.selectedMealWindow p {
+  font-weight: 400;
+  margin: 1rem 0.5rem 1rem 0;
+}
+.selectedMealWindow ul li {
+  font-size: 2rem;
+}
+.selectedMealWindow button {
+  margin: 0 0 0.5rem 0.5rem;
+  border-radius: 0.5rem;
+  background-color: goldenrod;
   padding: 0.5rem;
-  background-color: white;
-  color: black;
-  margin-bottom: 1rem;
-  box-shadow: 4px 4px 10px -6px black;
-}
-.listMeals {
-  transition: all 0.3s ease-out;
+  height: 2.5rem;
+  font-size: 1.1rem;
+  box-shadow: 0px 0px 7px rgb(255, 255, 255);
 }
 
-.listMeals p {
-  font-weight: 700;
-  letter-spacing: 0.2rem;
-  margin-block-end: 0.5rem;
-}
-.listMeals ul li {
-  padding-bottom: 0.2rem;
-  font-size: 0.8rem;
-  letter-spacing: 0.1rem;
-}
-.greyedOut {
-  background-color: rgba(47, 47, 47, 0.5);
-  color: rgba(0, 0, 0, 0.5);
-  pointer-events: none;
-}
-.greyedOut button {
-  margin-block-start: 0.5rem;
-  pointer-events: auto;
-  color: goldenrod;
-}
-
-.ingredientItem {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
-}
 .stockFormContainer {
-  transition: opacity 0.3s ease, max-height 0.3s ease; /* transition over 300ms */
-  opacity: 0; /* default to invisible */
-  max-height: 0; /* default to no height */
-  overflow: hidden; /* hide overflow */
+  transition: opacity 0.3s ease-in-out, max-height 0.3s ease-in-out;
+  opacity: 0;
+  max-height: 0;
+  overflow: hidden;
 }
 .stockFormContainer.visible {
   opacity: 1; /* make it fully visible */
   max-height: 1000px; /* adjust as per your form's maximum possible height */
 }
-.stockHeader {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-inline-end: 0.5rem;
-  margin-block-start: 0.5rem;
-}
+
 .stockHeader .stockToggle {
   border-radius: 0.5rem;
   background-color: goldenrod;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
-  letter-spacing: 0.1rem;
+
   color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
 
 .stockForm {
-  margin: 1rem;
+  margin: 0.5rem;
 }
 .stockForm div {
   display: flex;
@@ -217,21 +240,21 @@ nav ul li a > span {
   align-items: center;
   flex-shrink: 0;
   flex-wrap: nowrap;
-  gap: 2rem;
+  gap: 1rem;
 }
 .stockForm input[type="number"] {
   margin: 0;
-  flex-basis: 30%;
+  flex-basis: 35%;
 }
 
 .stockForm button {
-  flex-basis: 30%;
+  flex-basis: 20%;
   border-radius: 0.5rem;
   background-color: goldenrod;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
-  letter-spacing: 0.1rem;
+
   color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
@@ -240,21 +263,12 @@ nav ul li a > span {
   display: flex;
   justify-content: space-between;
   align-items: center;
-
-  padding-bottom: 0.5rem;
-  margin-inline-start: 0.5rem;
-  margin-inline-end: 0.5rem;
-  background-color: white;
+  margin: 0 0.5rem 0.5rem 0.5rem;
+  background-color: darkgoldenrod;
   color: black;
-  margin-inline-start: 0.5rem;
-  margin-inline-end: 0.5rem;
   font-size: 1rem;
-  border: 1px solid #000000;
-  border-radius: 0.2rem;
+  border-radius: 0.5rem;
   padding: 0.5rem;
-  background-color: white;
-  margin-bottom: 1rem;
-  box-shadow: 4px 4px 10px -6px black;
 }
 
 .itemDetails {
@@ -267,32 +281,27 @@ nav ul li a > span {
 .itemName {
   flex-grow: 1;
 }
-
 .quantity,
 .unit {
   display: inline-flex;
   width: 50px;
 }
-
 .quantity {
   justify-content: flex-end;
-  padding-right: 0.5rem;
+  padding-right: 0.2rem;
 }
-
 .unit {
   justify-content: flex-start;
-  margin-right: 0.3rem;
 }
-
 .itemActions {
   display: flex;
 }
-
 .faIcon {
   color: goldenrod;
   font-size: 1.5rem;
   margin-right: 0.5rem;
 }
+
 
 .recipeFormContainer {
   transition: opacity 0.3s ease, max-height 0.3s ease;
@@ -304,20 +313,14 @@ nav ul li a > span {
   opacity: 1;
   max-height: 1000px;
 }
-.recipesHeader {
-  display: flex;
-  flex-direction: row;
-  justify-content: space-between;
-  margin-inline-end: 0.5rem;
-  margin-block-start: 0.5rem;
-}
+
 .recipesHeader .recipesToggle {
   border-radius: 0.5rem;
   background-color: goldenrod;
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
-  letter-spacing: 0.1rem;
+
   color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
@@ -350,7 +353,7 @@ nav ul li a > span {
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
-  letter-spacing: 0.1rem;
+
   color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
@@ -378,6 +381,7 @@ nav ul li a > span {
   border-radius: 0.2rem;
   padding: 0.5rem;
   background-color: darkgoldenrod;
+  color: #000000;
   margin-bottom: 1rem;
   box-shadow: 4px 4px 10px -6px black;
   position: relative; /* Added to position the buttons at the bottom */
@@ -385,19 +389,11 @@ nav ul li a > span {
 
 .recipeList p {
   font-weight: 700;
-  letter-spacing: 0.2rem;
 }
 
 .recipeList ul li {
   padding-bottom: 0.2rem;
   font-size: 0.8rem;
-  letter-spacing: 0.1rem;
-}
-
-.ingredientItem {
-  display: flex;
-  justify-content: space-between;
-  width: 100%;
 }
 
 .recipeActions {
@@ -408,33 +404,6 @@ nav ul li a > span {
   /* Positioning 10px from the right of .recipeList */
 }
 
-.selectedMealWindow h2 {
-  padding: 0;
-  margin-bottom: 1rem;
-}
-.selectedMealWindow p {
-  font-weight: 400;
-  letter-spacing: normal;
-  margin-bottom: 1rem;
-}
-.selectedMealWindow ul li {
-  font-size: 1rem;
-  letter-spacing: 0.1rem;
-}
-.selectedMealWindow button {
-  border-radius: 0.5rem;
-  background-color: goldenrod;
-  padding: 0.5rem;
-  height: 2.5rem;
-  font-size: 1.1rem;
-  letter-spacing: 0.1rem;
-  color: black;
-  box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
-  margin-block-end: 0.5rem;
-}
-.shoppingList h2 {
-  margin-block-start: 0.5rem;
-}
 .shoppingList ul {
   margin-inline-start: 0.5rem;
   margin-inline-end: 0.5rem;
@@ -442,7 +411,7 @@ nav ul li a > span {
   color: black;
   border-radius: 0.5rem;
   padding: 0.5rem;
-  background-color: white;
+  background-color: darkgoldenrod;
   margin-bottom: 1rem;
   box-shadow: 4px 4px 10px -6px black;
 }
@@ -463,7 +432,7 @@ nav ul li a > span {
   padding: 0.5rem;
   height: 2.5rem;
   font-size: 1.1rem;
-  letter-spacing: 0.1rem;
+
   color: black;
   box-shadow: 3px 3px 6px rgba(0, 0, 0, 0.5);
 }
